--- a/todoList.css
+++ b/todoList.css
@@ -60,6 +60,8 @@ body {
     margin-right: 10px;
     border-radius: 30px;
     background-color: #fff;
+    background: url("./images/bg.png");
+    background-size: cover;
     
     overflow: scroll;
     display: flex;
@@ -75,7 +77,7 @@ body {
     padding: 30px;
     text-align: left;
     border-radius: 20px;
-    background-color : rgba(214, 219, 228, 0.658);
+    background-color : rgba(214, 219, 228,0.9);
     box-shadow: 2px 5px 5px rgba(0,0,0,0.2);
 
     font-size: 1.5rem;
@@ -134,7 +136,20 @@ body {
 
 .filter {
     height: 80px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
+.filter div{
+    height: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+.filter img{
+    height: 50%;
+    cursor: pointer;
+}
+
 
 .analytics{
     display: flex;
@@ -168,6 +183,10 @@ body {
     border-radius: 50%;
 
     box-shadow: inset 0 0 10px 4px rgba(0,0,0,0.2);
+}
+
+#percentageComplete, #completeRatio{
+    text-shadow: 0px 0px 10px #333;
 }
 
 #percentageComplete {
