--- a/todoList.css
+++ b/todoList.css
@@ -9,11 +9,6 @@
     opacity: 0.3;
 }
 
-.pinned {
-    order : 99;
-}
-
-
 /* -------------------------------------------- */
 body {
     background-color: rgba(214, 219, 228, 0.658);
@@ -55,14 +50,11 @@ body {
 
 .todoDisplay {
     flex:1;
-    max-height: 97.5%;
+    height: 97.5%;
     padding: 10px;
     margin-right: 10px;
     border-radius: 30px;
-    background-color: #fff;
-    background: url("./images/bg.png");
-    background-size: cover;
-    
+    background: url("./images/bg.png") right / cover;
     overflow: scroll;
     display: flex;
     flex-flow: column wrap;
@@ -71,24 +63,20 @@ body {
 
 .todo {
     flex:1;
-    max-height: 250px;
+    max-height: 300px;
     width: 250px;
     margin: 10px;
-    padding: 30px;
-    text-align: left;
+    padding: 10px;
     border-radius: 20px;
-    background-color : rgba(214, 219, 228,0.9);
+    background-color : rgb(52 85 116 / 98%);;
     box-shadow: 2px 5px 5px rgba(0,0,0,0.2);
 
     font-size: 1.5rem;
-    color: #456078;
+    color: #fff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-.todo:last-child {
-    flex-grow: 0;
 }
 
 .todoBody {
@@ -103,6 +91,7 @@ body {
     align-items: center;
     margin: 20px;
 }
+
 .features img {
     height: 50px;
     width: 50px;
@@ -114,16 +103,20 @@ body {
     width: 70%;
     text-align: center;
     font-size: 1rem;
-    border : 1px solid #456078;
+    letter-spacing: 3px;
+    background-color: #fe5f8d;
+    color: #fff;
     border-radius: 50px;
+    box-shadow: 0 0 7px rgba(0,0,0,0.2) ;
     cursor: pointer;
 }
 
+.completed .markComplete{
+    background-color: #456078;
+}
 
 .sidebar {
-    border-radius: 30px;
-    width: 20%;
-
+    width: 300px;
     display: flex;
     flex-direction: column;
 }
@@ -134,38 +127,46 @@ body {
     margin-bottom: 10px;
 }
 
-.filter {
-    height: 80px;
+.filter {  
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-shrink: 0;
+}
+.filtericons {
+    display: flex;
+    height: 80px;
+    width: 100%;
     justify-content: space-evenly;
     align-items: center;
 }
-.filter div{
-    height: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-}
-.filter img{
+.filtericons img{
     height: 50%;
     cursor: pointer;
 }
 
-
 .analytics{
     display: flex;
-    justify-content: center;
-    flex:1
+    flex-direction: column;
+    align-items: center;
+}
+.sidebar h3 {
+    color: #ddd;
+    margin-bottom: 10px;
 }
 
-.percentageGraphic {
-    margin: 20px;
-    height: 220px;
-    width: 220px;
-
+.percentageGraphic,.inner {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     border-radius: 50%;
+}
+
+.percentageGraphic {
+    margin: 20px 20px 10px 20px;
+    height: 220px;
+    width: 220px;
     background-color: #fff;
     position: relative;
     box-shadow: 0 0 10px 4px rgba(0,0,0,0.2);
@@ -173,15 +174,9 @@ body {
 .inner {
     height: 200px;
     width: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-    position: relative;
     z-index: 5;
     background-color: #456078;
-    border-radius: 50%;
-
     box-shadow: inset 0 0 10px 4px rgba(0,0,0,0.2);
 }
 
@@ -234,23 +229,21 @@ body {
     left: 110px;
 }
 
-
 .addForm {
     flex:2;
     background-color: #fff !important;
     border : 5px solid #456078 ;
-
     display: flex;
     flex-direction: column;
 }
 
 .formBanner {
-    height: 12%;
+    height: 100px;
     background-color: #456078;
     border-radius: 22px 22px 0 0;
     text-align: center;
     letter-spacing: 3px;
-    color: #fff;
+    color: #ddd;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -258,14 +251,13 @@ body {
 
 form {
     flex:1;
-    margin-top: 10px;
     padding: 10px;
     display: flex;
     flex-direction: column;
 }
 
 form > input {
-    margin: 10px;
+    margin: 0 10px;
     height: 15%;
     border-radius: 30px;
     border: 1px solid #456078;
@@ -278,7 +270,6 @@ form > input::placeholder {
 }
 
 form label {
-    margin-top: 10px;
     padding: 10px;
     color: #456078;
     font-size: 1.3em;
@@ -298,11 +289,12 @@ select {
 button {
     height: 80px;
     width: 80px;
-    margin: 20px auto;
+    margin: 10px auto;
     border-radius: 50%;
     background-color: #fff;
     border: 3px solid #456078;
     outline: none;
     color: #456078;
     font-size: 1.2em;
+    box-shadow: 0 0 5px rgba(0,0,0,0.4);
 }
