--- a/src/todoList.css
+++ b/src/todoList.css
@@ -112,22 +112,31 @@ body {
     cursor: pointer;
 }
 
-.todo__deleteBtn {
+.todo__deleteBtn, .todo__detailBtn {
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background-color: #fe5f8d;
-    color: #fff;
     position: absolute;
     top: 10px;
-    right: 20px;
     padding: 5px 7px 10px 7px ;
     text-align: center;
     display: none;
     cursor: pointer;
 }
 
-.todo:hover .todo__deleteBtn {
+.todo__deleteBtn {
+    right: 20px;
+    background-color: #fe5f8d;
+    color: #fff;
+}
+
+.todo__detailBtn {
+    left: 20px;
+    background-color: #fff;
+    color: #fe5f8d;
+}
+
+.todo:hover .todo__deleteBtn, .todo:hover .todo__detailBtn {
     display: block;
 }
 
@@ -181,6 +190,85 @@ body {
 .deleteAnyway {
     background-color: #fe5f8d;
     color: #fff;
+}
+
+.detailWrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0,0,0,0.6);
+    margin: auto;
+    z-index: 10;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.detail {
+    width: 400px;
+    background: url("./../images/detailbg.png") left / contain;
+    padding: 30px;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.detail__body {
+    margin: 10px;
+    padding: 20px;
+    font-size: 1.3rem;
+    letter-spacing: 2px;
+    color : #456078;
+    width: 90%;
+    text-align: center;
+}
+
+.detail__options {
+    height: 30px;
+    cursor: pointer;
+    opacity: 0.8;
+    margin: 10px 10px;
+}
+
+.detail--selectedOption {
+    transform: scale(1.7);
+    opacity: 1 !important;
+}
+
+.detail__controls {
+    margin: 10px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.detail__btn {
+    height: 40px;
+    width: 150px;
+    margin: 10px;
+    border-radius: 20px;
+    border: none;
+    letter-spacing: 1px;
+    outline: none;
+    color: #fff;
+}
+
+.detailSaveBtn {
+    background-color: #456078;
+}
+
+.detailCancelBtn {
+    background-color: #fe5f8d;
+}
+
+.detail__btn:hover {
+    transform: scale(1.1);
+    cursor: pointer;
 }
 
 .sidebar {
