--- a/src/todoList.css
+++ b/src/todoList.css
@@ -21,8 +21,8 @@ body {
     min-height: 60px;
     height: 10vh;
     border-radius: 30px;
-    background-color: #456078;
-
+    background-color: #fff;
+    background: url("./../images/headerbg.png") top/cover;
     display: flex;
     justify-content: space-between;
 }
@@ -31,6 +31,9 @@ body {
     letter-spacing: 0.15em;
     font-size: 1.5em;
     padding: 15px 40px;
+    color: #456078;
+}
+.header__logo {
     color: #fff;
 }
 
@@ -293,7 +296,7 @@ body {
 }
 
 .filter, .analytics, .addForm {
-    background-color: #456078;
+    background-color: #fff;
     border-radius: 30px;
     margin-bottom: 10px;
 }
@@ -316,11 +319,11 @@ body {
 .filtericons__icon {
     height: 50%;
     cursor: pointer;
-    opacity: 0.6;
+    opacity: 0.7;
 }
 
 .filter__label {
-    color: #ddd;
+    color: #456078;
     margin-bottom: 10px;
 }
 
@@ -336,7 +339,7 @@ body {
 }
 
 .analytics__label {
-    color: #ddd;
+    color: #456078;
     margin-bottom: 10px;
 }
 
@@ -419,8 +422,7 @@ body {
 
 .addForm {
     flex:2;
-    background-color: #fff !important;
-    border : 5px solid #456078 ;
+    border : 5px solid #fff;
     display: flex;
     flex-direction: column;
 }
@@ -431,7 +433,7 @@ body {
     border-radius: 22px 22px 0 0;
     text-align: center;
     letter-spacing: 3px;
-    color: #ddd;
+    color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -451,10 +453,11 @@ body {
     border: 1px solid #456078;
     padding-left: 20px;
     outline: none;
+    font-size: 1.4em;
+    color: #456078;
 }
 
 .addForm__message::placeholder {
-    font-size: 1.4em;
     color: #456078;
 }
 
@@ -480,10 +483,15 @@ body {
     width: 80px;
     margin: 10px auto;
     border-radius: 50%;
-    background-color: #fff;
-    border: 3px solid #456078;
+    background-color: #456078;
+    border: none;
     outline: none;
-    color: #456078;
+    color: #fff;
     font-size: 1.2em;
     box-shadow: 0 0 5px rgba(0,0,0,0.4);
+    cursor: pointer;
+}
+
+.addForm__submit:hover {
+    transform: scale(1.1);
 }
